fixing spacing

--- a/css/index.css
+++ b/css/index.css
@@ -163,13 +163,11 @@ img {
   max-width: 100%;
   height: auto;
 }
-
 .container {
-  max-width: 1200px;
+  max-width: 800px;
   width: 100%;
   margin: 0 auto;
 }
-
 .navBarItems {
   display: flex;
   justify-content: space-evenly;
@@ -214,7 +212,6 @@ footer {
   text-align: center;
 }
 body {
-  background-color: #fdfffc;
   font-family: 'Montserrat', sans-serif;
 }
 h1 {
@@ -341,7 +338,6 @@ h1 {
 .aboutBody {
   background-image: linear-gradient(to left, #2EC4B6, #fdfffc);
 }
-
 h1 {
   text-align: center;
 }
@@ -362,11 +358,13 @@ h1 {
   align-items: top;
   padding: 40px;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .aboutMainSection {
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: justify;
   }
 }
 .aboutMainSection .aboutMainLeftColumn {
@@ -403,7 +401,7 @@ h1 {
   padding-top: 40px;
   width: 60%;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .aboutMainSection .aboutMainRightColumn {
     display: flex;
     flex-direction: column;
@@ -445,17 +443,20 @@ h1 {
   text-align: right;
   width: 100%;
   padding-right: 40px;
-  margin-bottom: 40px;
   border-bottom: 2px dotted #E71d36;
 }
 .meetTheTeam {
-  display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-.meetTheTeam h1{
-    margin-bottom: 40px;
+@media (max-width: 768px) {
+  .meetTheTeam {
+    padding: 3% 15%;
   }
+}
+.meetTheTeam h1 {
+  margin-bottom: 30px;
+}
 .row1 {
   padding-top: 40px;
   display: flex;
@@ -676,4 +677,12 @@ h1 {
     width: 100%;
     text-align: justify;
   }
+}
+.aboutBody {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+.homeBody {
+  max-width: 1080px;
+  margin: 0 auto;
 }
