--- a/less/home-page.less
+++ b/less/home-page.less
@@ -160,10 +160,12 @@ h1{
     justify-content: space-around;
     align-items: top;
     padding: 40px;
-    @media (max-width: 500px){
+    @media (max-width: 800px){
         width:100%;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        text-align: justify; 
     }
     // margin: 20px;
     .aboutMainLeftColumn{
@@ -196,7 +198,7 @@ h1{
         padding-left: 5rem;
         padding-top: 40px;
         width: 60%;
-        @media (max-width: 500px){
+        @media (max-width: 800px){
             display: flex;
             flex-direction: column;
             width:100%;
@@ -249,11 +251,15 @@ h1{
                 // text-decoration: underline;
             }
 .meetTheTeam{
-            display: flex;
-            justify-content: space-between;
+            // display: flex;
+            justify-content: space-evenly;
+            // border: 2px solid red;
             align-items: center;
-            flex-direction: column;
-            padding:40px;
+            // flex-direction: column;
+            // padding:40px;
+            @media (max-width:768px) {
+                padding:3% 15%;               
+            }
                 h1{
                     margin-bottom: 30px;
                 }
